# CCNUOJ

./: .gitignore
ccnuoj-website/: .eslintrc.js  README.md  angular.json  contest-question.json  index.html  package-lock.json  package.json  question.json  tsconfig.json  tslint.json  vue.config.js
ccnuoj-website/config/: index.js
ccnuoj-website/dev-data/: contest.json  contest_problem.json  problem.json
ccnuoj-website/public/: index.html
ccnuoj-website/src/: App.vue  index.html  main.js  marked-config.js
ccnuoj_judger/: .gitignore  command.py  launch.py  local_config.py.example  local_config.txt.example
ccnuoj_judger/src/: __init__.py  command.py  common.py  diff.py  global_object.py  judge.py  judge_data.py  judge_request.py  main_loop.py  sandbox_driver.py  webapi.py
ccnuoj_sandbox/: CMakeLists.txt  ChildProcess.cpp  ChildProcess.h  LaunchException.h  ProgramTerminated.h  SandboxException.h  SyscallHandler.cpp  SyscallHandler.h  TODO.txt  common.h  config.cpp  config.json.example  main.cpp  run.cpp  syscall_list.cpp
ccnuoj_webapi/: app.py  requirements.txt  wsgi.py
ccnuoj_webapi/config/: .gitignore  common.py  development.py  production.py.example
ccnuoj_webapi/predict_related_data/: problemdict.json  user_list.json
ccnuoj_webapi/src/: __init__.py  authentication.py  authorization.py  contest.py  contest_register.py  global_obj.py  help.py  init_database.py  judge_command.py  judge_data.py  judge_request.py  judge_scheme.py  model.py  server.py  (+3 more)
predict/: .getdata.py.swp  Kmeans15.npy  calc_user_eigenvalue.py  getdata.py  predict.py  user_list.json
(+328 files in other folders)
